# Real-Estate

./: .gitignore  LICENSE  README.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  about.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Backend/: .env.example  Procfile  nixpacks.toml  pyproject.toml  requirements.txt  requirements.txt.txt
Backend/backend/PostProperty/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/backend/PostProperty/migrations/: 0001_initial.py  0002_propertylisting_latitude_propertylisting_longitude_and_more.py  0003_propertylisting_is_verified_inquiry_review.py
Backend/backend/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend/backend/accounts/migrations/: 0001_initial.py
Backend/backend/backend/: settings.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/Components/Auth/: Login.css  Login.jsx
frontend/src/Components/Buy/: BuyPage.css  BuyPage.jsx  PropertyDetail.css  PropertyDetail.jsx
frontend/src/Components/Chat/: AIChatWidget.css  AIChatWidget.jsx
frontend/src/Components/Dashboard/: Dashboard.css  Dashboard.jsx
frontend/src/Components/Home/: Home.jsx
frontend/src/Components/Sell/: SellPage.jsx
frontend/src/utils/: api.js
